[tool.poetry]
name = "channels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "broker" },
    { include = "chat" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
jinja2 = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
redis = "^4.5.4"
multidict = "^6.0.4"
attr = "^0.3.2"
yarl = "^1.9.2"
attrs = "^23.1.0"
aiohttp = "^3.8.4"
aio-pika = "^9.0.5"
bson = "^0.5.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
    "C901",
]