[tool.poetry]
name = "channels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "broker" },
    { include = "chat" },
#    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.98.0"}
jinja2 = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
redis = "4.6.0"
aio_pika = "8.1.1"
aiormq = "6.4.2"
dnspython = "2.3.0"
idna = "3.4"
motor = "3.1.1"
multidict = "6.0.4"
pamqp = "3.2.1"
pydantic = "1.10.7"
pymongo = "4.3.3"
typing_extensions = "4.5.0"
yarl = "1.8.2"
flake8 = "6.0.0"

attr = "0.3.2"
attrs = "23.1.0"
aiohttp = "3.8.4"
bson = "0.5.10"
gspot-fastapi-auth = "^0.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
    "C901",
]
