[tool.poetry]
name = "gspot-user-service"
version = "0.1.0"
description = ""
authors = ["egorfilippov <e.filippov@edisoncorp.ru>"]
readme = "README.md"
packages = [{include = "gspot_user_service"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
django-filter = "^22.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
black = "20.8b1"
isort = "^4.3.21"
flake8 = "^3.7.9"
autoflake = "^1.3.1"
ipython = "7.19.0"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
