[tool.poetry]
name = "gspot-user-service"
version = "0.1.0"
description = ""
authors = ["egorfilippov <e.filippov@edisoncorp.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
django-filter = "^22.1"
psycopg2-binary = "^2.9.5"
drf-yasg = "^1.21.5"
pillow = "^9.4.0"
pyjwt = "^2.6.0"
pika = "^1.3.2"
redis = "^4.5.5"
coreapi = "^2.3.3"
whitenoise = "^6.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^1.3.1"
ipython = "7.19.0"
faker = "^0.7.4"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"